# tyftest

./: .gitignore  CLAUDE.md  README.md  TOOL_VERSION.md  pyproject.toml
.github/workflows/: pages.yml
docs/: tyf-experiment-repo-prep.md  tyf-experiment-scaling.md  tyf-experiment-task-mining.md
docs/changes/: 2026-07-01-dlt-120-task.md  2026-07-01-dlt-131-task.md  2026-07-01-session-naming.md  2026-07-01-strong-snippet-rewrite.md  2026-07-01-usage-limit-backstop.md  2026-07-01-verbatim-claude-baseline.md  2026-07-02-dlt-140-task.md  2026-07-02-limit-and-overload-restart.md  2026-07-02-per-invocation-results.md  2026-07-02-round4-data-collection-issues.md  2026-07-03-floor-abort.md  2026-07-03-litestar-repo-and-tasks.md  2026-07-03-tamper-detection-additions.md
docs/learnings/: tyf-analysis-recipe.md  tyf-experiment-lessons.md  tyf-experiment-task-mining.md  (+6 more)
harness/: analyze.py  build_conditions.sh  build_tyf.sh  claude-snippet-strong.md  config.sh  drive.sh  interruption_check.py  launder.sh  limit_check.py  make_task.sh  mine_tasks.sh  neutral_claude.md  parse_transcript.py  run.sh  run_dlt120_opus.sh  run_dlt131_opus.sh  run_dlt140_opus.sh  run_litestar_opus.sh  run_opus_round.sh  run_sonnet_round.sh  score.sh  setup_repo.sh  trajectory.py  validate.sh
notebooks/: analyze_round6_litestar.py  analyze_run.py
public/: dlt131.html  index.html
results/: opus-dlt002C.json  pilot-notes.md  results.jsonl  round2-opus.jsonl  round2-sonnet.jsonl  round3-dlt120-opus-run1-capped.jsonl  round3-dlt120-opus-run2.jsonl  round3-dlt120-opus.jsonl  round4-dlt131-opus.jsonl
(+110 files in other folders)
